--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head ng-app="myTreeApp">
+<head>
 	<meta charset="utf-8">
 	<title>欢 迎</title>
 	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
@@ -10,27 +10,31 @@
 	<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 	<!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
-	<!-- 引入Angular JS -->
-	<script src="https://cdn.staticfile.org/angular.js/1.4.6/angular.min.js"></script>
 
 	<!-- 自定义基础样式调整 -->
     <link rel="stylesheet" href="/stylesheets/base.css" >
 </head>
 <body class="c-welcome-bg-img">
-    <div class="container" ng-controller="badgeCtrl">
-        <a ng-click="go()" ng-href="{{linkUrl}}"> <span class="badge pull-right c-welcome-badge"> 跳 过 </span> </a>
+    <div class="container">
+		<a onclick="badge()"> <span id="badge" class="badge pull-right c-welcome-badge"> 跳 过 </span> </a>
     </div>
 </body>
 
 <script>
-	var app = angular.module('myTreeApp',[]);
-	app.controller("badgeCtrl",function($scope){
-		$scope.linkUrl = '/index';
-		$scope.go = function(){
-			console.log('go function run');
-			window.location.href = '/index';
-		};
+	var jq = $.noConflict();
+	jq(document).ready(() =>{
+		var num = 3;
+		setInterval(() =>{
+			if(num <= 0) badge();
+			if(num > 0){
+				jq('#badge').text('跳 过 ' + num);
+				num = num - 1;
+			}
+		},1000);
 	});
-</script>
+	function badge(){
+		window.location.href = '/index';
+	}
 
+</script>
 </html>
