--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -37,7 +37,7 @@ a,
 
 /* index style */
 .c-index-bg-img{
-  background-image: url('./images/welcome.png');
+  background-image: url('../images/welcome.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
